--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/graphql.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphiql</title>
+
+    <script src="libs/gsap/gsap.min.js" defer></script>
+	  <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+	  <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+
   </head>
   <body>
     <div id="root"></div>
